fluxcd/apps/overlays/production/nextcloud/clamav-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-clamav
spec:
  template:
    spec:
      containers:
        - name: clamav
          image: docker.io/clamav/clamav:1.5.4@sha256:ebec5bc138401b36ae987caa1a3fa3c3b2a21ed3d51f0bfa5852825e663e67b0
  volumeClaimTemplates:
    - metadata:
        name: db
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 2Gi
