fluxcd/apps/overlays/production/nextcloud/collabora-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-collabora
spec:
  template:
    spec:
      containers:
        - name: collabora
          image: docker.io/collabora/code:25.04.9.1.1
