fluxcd/apps/overlays/production/nextcloud/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 3
  template:
    spec:
      containers:
        - name: nextcloud
          image: docker.io/library/nextcloud:31.0.10-apache
          livenessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: ncloud.optcp.com
          readinessProbe:
            httpGet:
              httpHeaders:
                - name: Host
                  value: ncloud.optcp.com
          resources:
            requests:
              cpu: 200m
              memory: 512Mi
            limits:
              cpu: 2
              memory: 2Gi
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-cron
spec:
  template:
    spec:
      containers:
        - name: cron
          image: docker.io/library/nextcloud:31.0.10-apache
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-notify-push
spec:
  template:
    spec:
      containers:
        - name: notify-push
          image: docker.io/nextcloud/aio-notify-push:20250210
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-imaginary
spec:
  template:
    spec:
      containers:
        - name: imaginary
          image: docker.io/nextcloud/aio-imaginary:20250210
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-talk-hpb
spec:
  template:
    spec:
      containers:
        - name: signaling
          image: docker.io/strukturag/nextcloud-spreed-signaling:1.3.3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
spec:
  template:
    spec:
      containers:
        - name: whiteboard
          image: ghcr.io/nextcloud-releases/whiteboard:1.0.4
