fluxcd/apps/overlays/production/nextcloud/elasticsearch-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: nextcloud-elasticsearch
spec:
  template:
    spec:
      containers:
        - name: elasticsearch
          image: docker.io/library/elasticsearch:9.4.2
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 5Gi
