fluxcd/apps/overlays/production/nextcloud/notify-push-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-notify-push
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: notify-push
          image: docker.io/icewind1991/notify_push:1.3.5
