fluxcd/apps/overlays/production/nextcloud/talk-hpb-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-talk-hpb
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: signaling
          image: docker.io/strukturag/nextcloud-spreed-signaling:e78e914@sha256:c3f38a9a145d9f9d9275eb208b7a63cb5eb3558907f9076d1b1e0f0909e57aa1
