fluxcd/apps/overlays/production/nextcloud/whiteboard-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-whiteboard
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/ingress: "true"
    spec:
      containers:
        - name: whiteboard
          image: ghcr.io/nextcloud-releases/whiteboard:v1.5.9@sha256:b60b7633f90d106ac6922f9bc27e1a1ca2442488b740fefdae4c812f34e9cebc
