fluxcd/apps/overlays/production/nextcloud/service-nextcloud-collabora-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-collabora
  labels:
    policy.prplanit.com/ingress: "true"
