fluxcd/apps/overlays/production/nextcloud/service-nextcloud-notify-push-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-notify-push
  labels:
    policy.prplanit.com/ingress: "true"
