fluxcd/apps/overlays/production/nextcloud/service-nextcloud-talk-hpb-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-talk-hpb
  labels:
    policy.prplanit.com/ingress: "true"
