fluxcd/apps/overlays/production/nextcloud/service-nextcloud-whiteboard-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-whiteboard
  labels:
    policy.prplanit.com/ingress: "true"
