fluxcd/apps/overlays/production/nextcloud/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: nextcloud
  namespace: temple-of-time
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
      conditions:
        - "[STATUS] == 200"
        - "[RESPONSE_TIME] < 5000"
      url: https://ncloud.optcp.com/login
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "ncloud.optcp.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /push
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nextcloud-notify-push
          port: 7867
    - matches:
        - path:
            type: PathPrefix
            value: /browser
        - path:
            type: PathPrefix
            value: /hosting/discovery
        - path:
            type: PathPrefix
            value: /hosting/capabilities
        - path:
            type: PathPrefix
            value: /cool
      backendRefs:
        - name: nextcloud-collabora
          port: 9980
    - matches:
        - path:
            type: PathPrefix
            value: /standalone-signaling
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nextcloud-talk-hpb
          port: 8080
    - matches:
        - path:
            type: PathPrefix
            value: /whiteboard
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplacePrefixMatch
              replacePrefixMatch: /
      backendRefs:
        - name: nextcloud-whiteboard
          port: 3002
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: nextcloud
          port: 80
